[package]
name = "partition-index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
arrow2 = { version = "0.14.2", features = ["io_parquet", "io_parquet_compression"] }
async-trait = "0.1.64"
bincode = "1.3.3"
futures = "0.3.26"
itertools = "0.10.5"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
rayon = "1.6.1"
rstats = "1.2.24"
serde = { version = "1.0.152", features = ["derive"] }
siphasher = "0.3.10"
tokio = { version = "1.25.0", features = ["full"] }

[lib]
bench = false

# [[bin]]
# bench = false

[dev-dependencies]
criterion = "0.4.0"
proptest = "1.0.0"
pretty_assertions = "1.3.0"
tempfile = "3.3.0"

[[bench]]
name = "single_bloom_filter"
harness = false

[[bench]]
name = "single_cuckoo_filter"
harness = false
